Modification de mon back api

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
 
 ###> symfony/framework-bundle ###
-APP_SECRET=secretme
+APP_SECRET=ae21f8768d6ea8c085ab7721ee844603
 ###< symfony/framework-bundle ###
