--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,39 +1,33 @@
 security:
-    password_hashers:
-        App\Entity\User: 
-            algorithm: auto
-
     providers:
-        app_user_provider: 
-            entity:
-                class: App\Entity\User
-                property: email
+        app_user_provider:
+            id: App\Security\MongoUserProvider
+
     firewalls:
-        login: 
-            pattern: ^/api/login_check
+        dev:
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+
+        login:
+            pattern: ^/api/login$
             stateless: true
-            provider: app_user_provider
-            json_login: 
-                check_path: /api/login_check
+            json_login:
+                check_path: /api/login
                 username_path: email
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
-        api: 
+        api:
             pattern: ^/api
             stateless: true
+            provider: app_user_provider
             jwt: ~
 
-        logout:
-            pattern:  ^/api/logout
-            stateless: true
-
     access_control:
-        - {path: ^/api/login_check, roles: PUBLIC_ACCESS}
-        - {path: ^/api/user/create$, roles: PUBLIC_ACCESS}
-        - {path: ^/api/admin, roles: ROLE_ADMIN}
-        - {path: ^/api/coach, roles: ROLE_COACH}
-        - {path: ^/api, roles: IS_AUTHENTICATED_FULLY}
+        - { path: ^/api/login$, roles: PUBLIC_ACCESS }
+        - { path: ^/api, roles: PUBLIC_ACCESS }
 
-
+    password_hashers:
+        App\Document\Utilisateur:
+            algorithm: auto
