--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "doctrine/annotations": "^2.0",
         "doctrine/mongodb-odm-bundle": "^5.3",
+        "endroid/qr-code": "^5.0",
         "lexik/jwt-authentication-bundle": "^3.1",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
